--- a/src/features/Register/register.module.scss
+++ b/src/features/Register/register.module.scss
@@ -34,3 +34,11 @@
     margin-bottom: 2rem !important;
   }
 }
+.form-submit-error {
+  margin: 0;
+  color: #ff6464;
+  margin-top: 1.5rem;
+  &:nth-of-type(2) {
+    margin-top: 0.5rem;
+  }
+}
